<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.statistics.TotalRevenueByDayFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDayStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sen"
        android:text="@string/ch_n_ng_y"
        android:textSize="18dp"
        app:cornerRadius="8dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_DayStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="clear_text"
        android:layout_below="@id/btnDayStart">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_DayStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/t_ng_y"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDayTo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sen"
        android:text="@string/ch_n_ng_y"
        android:textSize="18dp"
        app:cornerRadius="8dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_DayTo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="clear_text"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/btnDayTo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_DayTo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/n_ng_y"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnXem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_DayTo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cornerRadius="8dp"
        android:text="Xem doanh thu"
        android:textSize="18sp"
        app:backgroundTint="#009688"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        app:cardCornerRadius="8dp"
        android:layout_below="@id/btnXem"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doanh_thuTt"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:fontFamily="@font/sen"/>
            <TextView
                android:layout_below="@id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="18sp"
                android:fontFamily="@font/sen"
                android:gravity="center"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>