<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:src="@drawable/ic_arrow_back_left"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/ttdh"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/btnBack"
            android:textColor="#252525"
            android:textStyle="bold"
            android:fontFamily="@font/sen"
            android:textSize="22sp"
            android:text="Thông tin đơn hàng"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/ttdh"
            android:id="@+id/rcv_drink_oder"/>
        <View
            android:id="@+id/line1"
            android:layout_below="@id/rcv_drink_oder"
            android:layout_width="match_parent"
            android:background="#ddd"
            android:layout_marginVertical="5dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tvTotalQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text=""
            android:textSize="16sp"
            android:fontFamily="@font/sen"
            android:layout_below="@id/line1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/th_nh_ti_n"
            android:textColor="@color/my_light_primary"
            android:textSize="17sp"
            android:fontFamily="@font/sen"
            android:textStyle="bold"
            android:layout_below="@id/line1"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text=""
            android:textSize="16sp"
            android:fontFamily="@font/sen"
            android:textStyle="bold"
            android:layout_below="@id/line1"
            android:layout_alignParentEnd="true"/>
        <View
            android:id="@+id/line2"
            android:layout_below="@id/tvTotalQuantity"
            android:layout_width="match_parent"
            android:background="#ddd"
            android:layout_marginVertical="5dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tvTrangThaiOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_below="@id/line2"
            android:text=""
            android:layout_marginVertical="8dp"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:fontFamily="@font/sen"/>
        <View
            android:id="@+id/line3"
            android:layout_below="@id/tvTrangThaiOrder"
            android:layout_width="match_parent"
            android:background="#ddd"
            android:layout_marginVertical="5dp"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:background="@drawable/khung_product"
            android:layout_below="@id/line3">
            <TextView
                android:id="@+id/tvNgayOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
               android:layout_alignParentTop="true"

                android:text="@string/th_i_gian_t_h_ng"
                android:textSize="16sp"
                android:fontFamily="@font/sen"/>
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginVertical="8dp"
                android:textSize="16sp"
                android:fontFamily="@font/sen"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/tvNgayOrder"/>
            <View
                android:id="@+id/line4"
                android:layout_below="@id/tvNgayOrder"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_marginVertical="5dp"
                android:layout_height="1dp"/>
            <ImageView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line4"
                android:layout_marginVertical="6dp"
                android:src="@drawable/ic_person"/>
            <TextView
                android:id="@+id/tenKh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:text="@string/t_n_kh"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/sen"
                android:layout_below="@id/line4"
                android:layout_toRightOf="@id/phone"/>
            <TextView
                android:id="@+id/tvTenKh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text=""
                android:textSize="16sp"
                android:fontFamily="@font/sen"
                android:layout_below="@id/line4"
                android:layout_toRightOf="@id/tenKh"/>
            <View
                android:id="@+id/line5"
                android:layout_below="@id/tenKh"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_marginVertical="5dp"
                android:layout_height="1dp"/>
            <ImageView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line5"
                android:layout_marginVertical="7dp"
                android:src="@drawable/ic_contact_phone"/>
            <TextView
                android:id="@+id/sdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:text="@string/s_i_n_tho_i"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/sen"
                android:layout_below="@id/line5"
                android:layout_toRightOf="@id/contact"/>
            <TextView
                android:id="@+id/tvSdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text=""
                android:textSize="16sp"
                android:fontFamily="@font/sen"
                android:layout_below="@id/line5"
                android:layout_toRightOf="@id/sdt"/>
            <View
                android:id="@+id/line7"
                android:layout_below="@id/contact"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_marginVertical="5dp"
                android:layout_height="1dp"/>
            <ImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line7"
                android:layout_marginVertical="7dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_location"/>
            <TextView
                android:id="@+id/diachi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:text="@string/a_ch_nh_n"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/sen"
                android:layout_below="@id/line7"
                android:layout_toRightOf="@id/location"/>

            <TextView
                android:id="@+id/tvDiaChi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/diachi"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/sen"
                android:text=""
                android:textSize="16sp" />
        </RelativeLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnXacNhanOrder"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#8BC34A"
            android:layout_below="@id/layout2"
            app:cornerRadius="8dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="#fff"
            android:text="Xác nhận"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHuyOrder"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#F44336"
            android:layout_below="@id/layout2"
            android:layout_alignParentEnd="true"
            app:cornerRadius="8dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="#fff"
            android:text="Hủy đơn"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDaThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#8BC34A"
            android:layout_below="@id/layout2"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            app:cornerRadius="8dp"
            android:textColor="#fff"
            android:textSize="16sp"
            android:text="Giao hàng thành công"/>
    </RelativeLayout>
</ScrollView>